# cp2077

./: .gitignore  Dockerfile  README.md  app.py  migrate_to_supabase.py  pyproject.toml  supabase_schema.sql
tle/cogs/: duel.py  handles.py
tle/util/: codeforces_common.py  font_downloader.py
tle/util/db/: __init__.py  supabase_db_conn.py  user_db_conn.py
