[project]
name = "TLE"
version = "0.1.0"
requires-python = ">= 3.9"
dependencies = [
  # Discord bot core
  "discord.py == 1.7.3",
  "aiohttp < 3.8",
  "aiocache",
  # Data & plotting
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  # Images
  "pillow",
  "aiodns",
  "brotli",
  # Database
  "supabase >= 2.0.0",
]

[project.optional-dependencies]
test = [
  "pytest",
]
